<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/living_better_smoking_title"
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/md_teal_700"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_space"
            android:text="@string/living_better_smoking_desc1"
            android:textSize="16sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/narrow_space"
                    android:padding="@dimen/mid_space"
                    android:text="@string/living_better_smoking_question1"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/md_teal_800" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mid_space"
                    android:background="@color/md_red_700"
                    android:text="@string/living_better_smoking_answer1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/narrow_space"
                    android:padding="@dimen/mid_space"
                    android:text="@string/living_better_smoking_question2"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/md_teal_800" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mid_space"
                    android:background="@color/md_teal_500"
                    android:text="@string/living_better_smoking_answer2"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>